parser.output
Terminals unused in grammar

   LIN
   CBLOCK
   CINLINE
   '='


State 9 conflicts: 1 shift/reduce
State 11 conflicts: 6 shift/reduce
State 25 conflicts: 1 shift/reduce
State 36 conflicts: 1 shift/reduce


Grammar

    0 $accept: goal $end

    1 goal: program
    2     | %empty

    3 program: statement semicolon_not
    4        | statement semicolon_not program

    5 semicolon_not: %empty
    6              | SEMICOLON

    7 statement: expression
    8          | declarations
    9          | assigns
   10          | conditional
   11          | loop
   12          | IDENTIFIER '(' funcArgsNull ')'
   13          | flow

   14 flow: FRETURN
   15     | FRETURN expression
   16     | FBREAK
   17     | FCONTINUE

   18 $@1: %empty

   19 loop: LFOR '(' declarations SEMICOLON expression SEMICOLON assigns ')' '{' $@1 program '}'

   20 $@2: %empty

   21 loop: LFOR '(' DLET IDENTIFIER LOF IDENTIFIER ')' '{' $@2 program '}'

   22 $@3: %empty

   23 loop: LFOR '(' DLET IDENTIFIER LOF arr_expression ')' '{' $@3 program '}'

   24 $@4: %empty

   25 loop: LWHILE '(' expression ')' '{' $@4 program '}'

   26 declarations: DLET IDENTIFIER
   27             | DVAR IDENTIFIER
   28             | DLET IDENTIFIER ASSGNOP expression
   29             | DVAR IDENTIFIER ASSGNOP expression
   30             | DCONST IDENTIFIER ASSGNOP expression

   31 $@5: %empty

   32 declarations: DCONST IDENTIFIER ASSGNOP $@5 anonymFunction

   33 $@6: %empty

   34 $@7: %empty

   35 declarations: DFUNC IDENTIFIER '(' $@6 funcParamsNull ')' '{' $@7 program '}'

   36 assigns: IDENTIFIER ASSGNOP expression
   37        | IDENTIFIER '[' arr_values ']' ASSGNOP expression

   38 $@8: %empty

   39 $@9: %empty

   40 anonymFunction: DFUNC '(' $@8 funcParamsNull ')' '{' $@9 program '}'

   41 $@10: %empty

   42 anonymFunction: '(' funcParamsNull ')' DAFUNC '{' $@10 program '}'

   43 funcParamsNull: %empty
   44               | funcParams

   45 funcParams: IDENTIFIER
   46           | assigns

   47 $@11: %empty

   48 $@12: %empty

   49 funcParams: IDENTIFIER $@11 ',' $@12 funcParams

   50 $@13: %empty

   51 $@14: %empty

   52 funcParams: assigns $@13 ',' $@14 funcParams

   53 funcArgsNull: %empty
   54             | expression
   55             | expression ',' funcArgsNull
   56             | ',' funcArgsNull

   57 $@15: %empty

   58 $@16: %empty

   59 conditional: CIF '(' expression ')' '{' $@15 program $@16 '}' conditionalElse

   60 conditionalElse: %empty

   61 $@17: %empty

   62 $@18: %empty

   63 conditionalElse: CELSE '{' $@17 program $@18 '}'

   64 $@19: %empty

   65 $@20: %empty

   66 conditionalElse: CELSE CIF '(' expression ')' '{' $@19 program $@20 '}' conditionalElse

   67 arr_expression: '[' ']'
   68               | '[' arr_values ']'

   69 arr_values: expression
   70           | expression ',' arr_values

   71 arr_index: IDENTIFIER '[' arr_values ']'
   72          | arr_expression '[' arr_values ']'

   73 expression: VSTR
   74           | VBOOL
   75           | VINT
   76           | VFLOAT
   77           | IDENTIFIER
   78           | arr_index
   79           | arr_expression
   80           | expression NULLCOALESCING expression
   81           | expression '?' expression ':' expression
   82           | expression LOGAND expression
   83           | expression LOGOR expression
   84           | expression EXPGT expression
   85           | expression EXPLT expression
   86           | expression EXPEQ expression
   87           | expression EXPDF expression
   88           | expression '<' expression
   89           | expression '>' expression
   90           | expression '+' expression
   91           | expression '-' expression
   92           | expression '*' expression
   93           | expression '/' expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 12 19 21 23 25 35 40 42 59 66
')' (41) 12 19 21 23 25 35 40 42 59 66
'*' (42) 92
'+' (43) 90
',' (44) 49 52 55 56 70
'-' (45) 91
'/' (47) 93
':' (58) 81
'<' (60) 88
'=' (61)
'>' (62) 89
'?' (63) 81
'[' (91) 37 67 68 71 72
']' (93) 37 67 68 71 72
'{' (123) 19 21 23 25 35 40 42 59 63 66
'}' (125) 19 21 23 25 35 40 42 59 63 66
error (256)
DLET (258) 21 23 26 28
DCONST (259) 30 32
DVAR (260) 27 29
DFUNC (261) 35 40
DAFUNC (262) 42
VSTR (263) 73
VINT (264) 75
VBOOL (265) 74
VFLOAT (266) 76
IDENTIFIER (267) 12 21 23 26 27 28 29 30 32 35 36 37 45 49 71 77
CIF (268) 59 66
CELSE (269) 63 66
ASSGNOP (270) 28 29 30 32 36 37
EXPGT (271) 84
EXPLT (272) 85
EXPEQ (273) 86
EXPDF (274) 87
NULLCOALESCING (275) 80
LOGOR (276) 83
LOGAND (277) 82
FRETURN (278) 14 15
FBREAK (279) 16
FCONTINUE (280) 17
SEMICOLON (281) 6 19
LFOR (282) 19 21 23
LOF (283) 21 23
LIN (284)
LWHILE (285) 25
CBLOCK (286)
CINLINE (287)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
goal (50)
    on left: 1 2, on right: 0
program (51)
    on left: 3 4, on right: 1 4 19 21 23 25 35 40 42 59 63 66
semicolon_not (52)
    on left: 5 6, on right: 3 4
statement (53)
    on left: 7 8 9 10 11 12 13, on right: 3 4
flow (54)
    on left: 14 15 16 17, on right: 13
loop (55)
    on left: 19 21 23 25, on right: 11
$@1 (56)
    on left: 18, on right: 19
$@2 (57)
    on left: 20, on right: 21
$@3 (58)
    on left: 22, on right: 23
$@4 (59)
    on left: 24, on right: 25
declarations (60)
    on left: 26 27 28 29 30 32 35, on right: 8 19
$@5 (61)
    on left: 31, on right: 32
$@6 (62)
    on left: 33, on right: 35
$@7 (63)
    on left: 34, on right: 35
assigns (64)
    on left: 36 37, on right: 9 19 46 52
anonymFunction (65)
    on left: 40 42, on right: 32
$@8 (66)
    on left: 38, on right: 40
$@9 (67)
    on left: 39, on right: 40
$@10 (68)
    on left: 41, on right: 42
funcParamsNull (69)
    on left: 43 44, on right: 35 40 42
funcParams (70)
    on left: 45 46 49 52, on right: 44 49 52
$@11 (71)
    on left: 47, on right: 49
$@12 (72)
    on left: 48, on right: 49
$@13 (73)
    on left: 50, on right: 52
$@14 (74)
    on left: 51, on right: 52
funcArgsNull (75)
    on left: 53 54 55 56, on right: 12 55 56
conditional (76)
    on left: 59, on right: 10
$@15 (77)
    on left: 57, on right: 59
$@16 (78)
    on left: 58, on right: 59
conditionalElse (79)
    on left: 60 63 66, on right: 59 66
$@17 (80)
    on left: 61, on right: 63
$@18 (81)
    on left: 62, on right: 63
$@19 (82)
    on left: 64, on right: 66
$@20 (83)
    on left: 65, on right: 66
arr_expression (84)
    on left: 67 68, on right: 23 72 79
arr_values (85)
    on left: 69 70, on right: 37 68 70 71 72
arr_index (86)
    on left: 71 72, on right: 78
expression (87)
    on left: 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90
    91 92 93, on right: 7 15 19 25 28 29 30 36 37 54 55 59 66 69 70
    80 81 82 83 84 85 86 87 88 89 90 91 92 93


State 0

    0 $accept: . goal $end

    DLET        shift, and go to state 1
    DCONST      shift, and go to state 2
    DVAR        shift, and go to state 3
    DFUNC       shift, and go to state 4
    VSTR        shift, and go to state 5
    VINT        shift, and go to state 6
    VBOOL       shift, and go to state 7
    VFLOAT      shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    CIF         shift, and go to state 10
    FRETURN     shift, and go to state 11
    FBREAK      shift, and go to state 12
    FCONTINUE   shift, and go to state 13
    LFOR        shift, and go to state 14
    LWHILE      shift, and go to state 15
    '['         shift, and go to state 16

    $default  reduce using rule 2 (goal)

    goal            go to state 17
    program         go to state 18
    statement       go to state 19
    flow            go to state 20
    loop            go to state 21
    declarations    go to state 22
    assigns         go to state 23
    conditional     go to state 24
    arr_expression  go to state 25
    arr_index       go to state 26
    expression      go to state 27


State 1

   26 declarations: DLET . IDENTIFIER
   28             | DLET . IDENTIFIER ASSGNOP expression

    IDENTIFIER  shift, and go to state 28


State 2

   30 declarations: DCONST . IDENTIFIER ASSGNOP expression
   32             | DCONST . IDENTIFIER ASSGNOP $@5 anonymFunction

    IDENTIFIER  shift, and go to state 29


State 3

   27 declarations: DVAR . IDENTIFIER
   29             | DVAR . IDENTIFIER ASSGNOP expression

    IDENTIFIER  shift, and go to state 30


State 4

   35 declarations: DFUNC . IDENTIFIER '(' $@6 funcParamsNull ')' '{' $@7 program '}'

    IDENTIFIER  shift, and go to state 31


State 5

   73 expression: VSTR .

    $default  reduce using rule 73 (expression)


State 6

   75 expression: VINT .

    $default  reduce using rule 75 (expression)


State 7

   74 expression: VBOOL .

    $default  reduce using rule 74 (expression)


State 8

   76 expression: VFLOAT .

    $default  reduce using rule 76 (expression)


State 9

   12 statement: IDENTIFIER . '(' funcArgsNull ')'
   36 assigns: IDENTIFIER . ASSGNOP expression
   37        | IDENTIFIER . '[' arr_values ']' ASSGNOP expression
   71 arr_index: IDENTIFIER . '[' arr_values ']'
   77 expression: IDENTIFIER .

    ASSGNOP  shift, and go to state 32
    '['      shift, and go to state 33
    '('      shift, and go to state 34

    '['       [reduce using rule 77 (expression)]
    $default  reduce using rule 77 (expression)


State 10

   59 conditional: CIF . '(' expression ')' '{' $@15 program $@16 '}' conditionalElse

    '('  shift, and go to state 35


State 11

   14 flow: FRETURN .
   15     | FRETURN . expression

    VSTR        shift, and go to state 5
    VINT        shift, and go to state 6
    VBOOL       shift, and go to state 7
    VFLOAT      shift, and go to state 8
    IDENTIFIER  shift, and go to state 36
    '['         shift, and go to state 16

    VSTR        [reduce using rule 14 (flow)]
    VINT        [reduce using rule 14 (flow)]
    VBOOL       [reduce using rule 14 (flow)]
    VFLOAT      [reduce using rule 14 (flow)]
    IDENTIFIER  [reduce using rule 14 (flow)]
    '['         [reduce using rule 14 (flow)]
    $default    reduce using rule 14 (flow)

    arr_expression  go to state 25
    arr_index       go to state 26
    expression      go to state 37


State 12

   16 flow: FBREAK .

    $default  reduce using rule 16 (flow)


State 13

   17 flow: FCONTINUE .

    $default  reduce using rule 17 (flow)


State 14

   19 loop: LFOR . '(' declarations SEMICOLON expression SEMICOLON assigns ')' '{' $@1 program '}'
   21     | LFOR . '(' DLET IDENTIFIER LOF IDENTIFIER ')' '{' $@2 program '}'
   23     | LFOR . '(' DLET IDENTIFIER LOF arr_expression ')' '{' $@3 program '}'

    '('  shift, and go to state 38


State 15

   25 loop: LWHILE . '(' expression ')' '{' $@4 program '}'

    '('  shift, and go to state 39


State 16

   67 arr_expression: '[' . ']'
   68               | '[' . arr_values ']'

    VSTR        shift, and go to state 5
    VINT        shift, and go to state 6
    VBOOL       shift, and go to state 7
    VFLOAT      shift, and go to state 8
    IDENTIFIER  shift, and go to state 36
    '['         shift, and go to state 16
    ']'         shift, and go to state 40

    arr_expression  go to state 25
    arr_values      go to state 41
    arr_index       go to state 26
    expression      go to state 42


State 17

    0 $accept: goal . $end

    $end  shift, and go to state 43


State 18

    1 goal: program .

    $default  reduce using rule 1 (goal)


State 19

    3 program: statement . semicolon_not
    4        | statement . semicolon_not program

    SEMICOLON  shift, and go to state 44

    $default  reduce using rule 5 (semicolon_not)

    semicolon_not  go to state 45


State 20

   13 statement: flow .

    $default  reduce using rule 13 (statement)


State 21

   11 statement: loop .

    $default  reduce using rule 11 (statement)


State 22

    8 statement: declarations .

    $default  reduce using rule 8 (statement)


State 23

    9 statement: assigns .

    $default  reduce using rule 9 (statement)


State 24

   10 statement: conditional .

    $default  reduce using rule 10 (statement)


State 25

   72 arr_index: arr_expression . '[' arr_values ']'
   79 expression: arr_expression .

    '['  shift, and go to state 46

    '['       [reduce using rule 79 (expression)]
    $default  reduce using rule 79 (expression)


State 26

   78 expression: arr_index .

    $default  reduce using rule 78 (expression)


State 27

    7 statement: expression .
   80 expression: expression . NULLCOALESCING expression
   81           | expression . '?' expression ':' expression
   82           | expression . LOGAND expression
   83           | expression . LOGOR expression
   84           | expression . EXPGT expression
   85           | expression . EXPLT expression
   86           | expression . EXPEQ expression
   87           | expression . EXPDF expression
   88           | expression . '<' expression
   89           | expression . '>' expression
   90           | expression . '+' expression
   91           | expression . '-' expression
   92           | expression . '*' expression
   93           | expression . '/' expression

    EXPGT           shift, and go to state 47
    EXPLT           shift, and go to state 48
    EXPEQ           shift, and go to state 49
    EXPDF           shift, and go to state 50
    NULLCOALESCING  shift, and go to state 51
    LOGOR           shift, and go to state 52
    LOGAND          shift, and go to state 53
    '?'             shift, and go to state 54
    '>'             shift, and go to state 55
    '<'             shift, and go to state 56
    '-'             shift, and go to state 57
    '+'             shift, and go to state 58
    '*'             shift, and go to state 59
    '/'             shift, and go to state 60

    $default  reduce using rule 7 (statement)


State 28

   26 declarations: DLET IDENTIFIER .
   28             | DLET IDENTIFIER . ASSGNOP expression

    ASSGNOP  shift, and go to state 61

    $default  reduce using rule 26 (declarations)


State 29

   30 declarations: DCONST IDENTIFIER . ASSGNOP expression
   32             | DCONST IDENTIFIER . ASSGNOP $@5 anonymFunction

    ASSGNOP  shift, and go to state 62


State 30

   27 declarations: DVAR IDENTIFIER .
   29             | DVAR IDENTIFIER . ASSGNOP expression

    ASSGNOP  shift, and go to state 63

    $default  reduce using rule 27 (declarations)


State 31

   35 declarations: DFUNC IDENTIFIER . '(' $@6 funcParamsNull ')' '{' $@7 program '}'

    '('  shift, and go to state 64


State 32

   36 assigns: IDENTIFIER ASSGNOP . expression

    VSTR        shift, and go to state 5
    VINT        shift, and go to state 6
    VBOOL       shift, and go to state 7
    VFLOAT      shift, and go to state 8
    IDENTIFIER  shift, and go to state 36
    '['         shift, and go to state 16

    arr_expression  go to state 25
    arr_index       go to state 26
    expression      go to state 65


State 33

   37 assigns: IDENTIFIER '[' . arr_values ']' ASSGNOP expression
   71 arr_index: IDENTIFIER '[' . arr_values ']'

    VSTR        shift, and go to state 5
    VINT        shift, and go to state 6
    VBOOL       shift, and go to state 7
    VFLOAT      shift, and go to state 8
    IDENTIFIER  shift, and go to state 36
    '['         shift, and go to state 16

    arr_expression  go to state 25
    arr_values      go to state 66
    arr_index       go to state 26
    expression      go to state 42


State 34

   12 statement: IDENTIFIER '(' . funcArgsNull ')'

    VSTR        shift, and go to state 5
    VINT        shift, and go to state 6
    VBOOL       shift, and go to state 7
    VFLOAT      shift, and go to state 8
    IDENTIFIER  shift, and go to state 36
    '['         shift, and go to state 16
    ','         shift, and go to state 67

    $default  reduce using rule 53 (funcArgsNull)

    funcArgsNull    go to state 68
    arr_expression  go to state 25
    arr_index       go to state 26
    expression      go to state 69


State 35

   59 conditional: CIF '(' . expression ')' '{' $@15 program $@16 '}' conditionalElse

    VSTR        shift, and go to state 5
    VINT        shift, and go to state 6
    VBOOL       shift, and go to state 7
    VFLOAT      shift, and go to state 8
    IDENTIFIER  shift, and go to state 36
    '['         shift, and go to state 16

    arr_expression  go to state 25
    arr_index       go to state 26
    expression      go to state 70


State 36

   71 arr_index: IDENTIFIER . '[' arr_values ']'
   77 expression: IDENTIFIER .

    '['  shift, and go to state 71

    '['       [reduce using rule 77 (expression)]
    $default  reduce using rule 77 (expression)


State 37

   15 flow: FRETURN expression .
   80 expression: expression . NULLCOALESCING expression
   81           | expression . '?' expression ':' expression
   82           | expression . LOGAND expression
   83           | expression . LOGOR expression
   84           | expression . EXPGT expression
   85           | expression . EXPLT expression
   86           | expression . EXPEQ expression
   87           | expression . EXPDF expression
   88           | expression . '<' expression
   89           | expression . '>' expression
   90           | expression . '+' expression
   91           | expression . '-' expression
   92           | expression . '*' expression
   93           | expression . '/' expression

    EXPGT           shift, and go to state 47
    EXPLT           shift, and go to state 48
    EXPEQ           shift, and go to state 49
    EXPDF           shift, and go to state 50
    NULLCOALESCING  shift, and go to state 51
    LOGOR           shift, and go to state 52
    LOGAND          shift, and go to state 53
    '?'             shift, and go to state 54
    '>'             shift, and go to state 55
    '<'             shift, and go to state 56
    '-'             shift, and go to state 57
    '+'             shift, and go to state 58
    '*'             shift, and go to state 59
    '/'             shift, and go to state 60

    $default  reduce using rule 15 (flow)


State 38

   19 loop: LFOR '(' . declarations SEMICOLON expression SEMICOLON assigns ')' '{' $@1 program '}'
   21     | LFOR '(' . DLET IDENTIFIER LOF IDENTIFIER ')' '{' $@2 program '}'
   23     | LFOR '(' . DLET IDENTIFIER LOF arr_expression ')' '{' $@3 program '}'

    DLET    shift, and go to state 72
    DCONST  shift, and go to state 2
    DVAR    shift, and go to state 3
    DFUNC   shift, and go to state 4

    declarations  go to state 73


State 39

   25 loop: LWHILE '(' . expression ')' '{' $@4 program '}'

    VSTR        shift, and go to state 5
    VINT        shift, and go to state 6
    VBOOL       shift, and go to state 7
    VFLOAT      shift, and go to state 8
    IDENTIFIER  shift, and go to state 36
    '['         shift, and go to state 16

    arr_expression  go to state 25
    arr_index       go to state 26
    expression      go to state 74


State 40

   67 arr_expression: '[' ']' .

    $default  reduce using rule 67 (arr_expression)


State 41

   68 arr_expression: '[' arr_values . ']'

    ']'  shift, and go to state 75


State 42

   69 arr_values: expression .
   70           | expression . ',' arr_values
   80 expression: expression . NULLCOALESCING expression
   81           | expression . '?' expression ':' expression
   82           | expression . LOGAND expression
   83           | expression . LOGOR expression
   84           | expression . EXPGT expression
   85           | expression . EXPLT expression
   86           | expression . EXPEQ expression
   87           | expression . EXPDF expression
   88           | expression . '<' expression
   89           | expression . '>' expression
   90           | expression . '+' expression
   91           | expression . '-' expression
   92           | expression . '*' expression
   93           | expression . '/' expression

    EXPGT           shift, and go to state 47
    EXPLT           shift, and go to state 48
    EXPEQ           shift, and go to state 49
    EXPDF           shift, and go to state 50
    NULLCOALESCING  shift, and go to state 51
    LOGOR           shift, and go to state 52
    LOGAND          shift, and go to state 53
    '?'             shift, and go to state 54
    '>'             shift, and go to state 55
    '<'             shift, and go to state 56
    '-'             shift, and go to state 57
    '+'             shift, and go to state 58
    '*'             shift, and go to state 59
    '/'             shift, and go to state 60
    ','             shift, and go to state 76

    $default  reduce using rule 69 (arr_values)


State 43

    0 $accept: goal $end .

    $default  accept


State 44

    6 semicolon_not: SEMICOLON .

    $default  reduce using rule 6 (semicolon_not)


State 45

    3 program: statement semicolon_not .
    4        | statement semicolon_not . program

    DLET        shift, and go to state 1
    DCONST      shift, and go to state 2
    DVAR        shift, and go to state 3
    DFUNC       shift, and go to state 4
    VSTR        shift, and go to state 5
    VINT        shift, and go to state 6
    VBOOL       shift, and go to state 7
    VFLOAT      shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    CIF         shift, and go to state 10
    FRETURN     shift, and go to state 11
    FBREAK      shift, and go to state 12
    FCONTINUE   shift, and go to state 13
    LFOR        shift, and go to state 14
    LWHILE      shift, and go to state 15
    '['         shift, and go to state 16

    $default  reduce using rule 3 (program)

    program         go to state 77
    statement       go to state 19
    flow            go to state 20
    loop            go to state 21
    declarations    go to state 22
    assigns         go to state 23
    conditional     go to state 24
    arr_expression  go to state 25
    arr_index       go to state 26
    expression      go to state 27


State 46

   72 arr_index: arr_expression '[' . arr_values ']'

    VSTR        shift, and go to state 5
    VINT        shift, and go to state 6
    VBOOL       shift, and go to state 7
    VFLOAT      shift, and go to state 8
    IDENTIFIER  shift, and go to state 36
    '['         shift, and go to state 16

    arr_expression  go to state 25
    arr_values      go to state 78
    arr_index       go to state 26
    expression      go to state 42


State 47

   84 expression: expression EXPGT . expression

    VSTR        shift, and go to state 5
    VINT        shift, and go to state 6
    VBOOL       shift, and go to state 7
    VFLOAT      shift, and go to state 8
    IDENTIFIER  shift, and go to state 36
    '['         shift, and go to state 16

    arr_expression  go to state 25
    arr_index       go to state 26
    expression      go to state 79


State 48

   85 expression: expression EXPLT . expression

    VSTR        shift, and go to state 5
    VINT        shift, and go to state 6
    VBOOL       shift, and go to state 7
    VFLOAT      shift, and go to state 8
    IDENTIFIER  shift, and go to state 36
    '['         shift, and go to state 16

    arr_expression  go to state 25
    arr_index       go to state 26
    expression      go to state 80


State 49

   86 expression: expression EXPEQ . expression

    VSTR        shift, and go to state 5
    VINT        shift, and go to state 6
    VBOOL       shift, and go to state 7
    VFLOAT      shift, and go to state 8
    IDENTIFIER  shift, and go to state 36
    '['         shift, and go to state 16

    arr_expression  go to state 25
    arr_index       go to state 26
    expression      go to state 81


State 50

   87 expression: expression EXPDF . expression

    VSTR        shift, and go to state 5
    VINT        shift, and go to state 6
    VBOOL       shift, and go to state 7
    VFLOAT      shift, and go to state 8
    IDENTIFIER  shift, and go to state 36
    '['         shift, and go to state 16

    arr_expression  go to state 25
    arr_index       go to state 26
    expression      go to state 82


State 51

   80 expression: expression NULLCOALESCING . expression
